--- a/package.json
+++ b/package.json
@@ -2,17 +2,26 @@
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://10.0.6.46/prod",
   "dependencies": {
+    "@types/classnames": "^2.2.11",
+    "@types/lodash": "^4.14.165",
+    "@types/react": "^16.9.56",
     "@types/react-dom": "^16.9.8",
     "@types/react-redux": "^7.1.9",
+    "@types/react-router-dom": "^5.1.6",
     "axios": "^0.19.2",
+    "classnames": "^2.2.6",
+    "lodash": "^4.17.20",
+    "node-sass": "^4.14.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
     "redux-devtools-extension": "^2.13.8",
     "redux-saga": "^1.1.3",
-    "typescript": "^3.7.5"
+    "typescript": "^3.9.7"
   },
   "scripts": {
     "start": "react-scripts start",
