--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/react-dom": "^16.9.8",
     "@types/react-redux": "^7.1.9",
     "@types/react-router-dom": "^5.1.6",
+    "@types/uuid": "^8.3.0",
     "axios": "^0.19.2",
     "classnames": "^2.2.6",
     "lodash": "^4.17.20",
@@ -21,7 +22,8 @@
     "react-scripts": "4.0.0",
     "redux-devtools-extension": "^2.13.8",
     "redux-saga": "^1.1.3",
-    "typescript": "^3.9.7"
+    "typescript": "^3.9.7",
+    "uuid": "^8.3.1"
   },
   "scripts": {
     "start": "react-scripts start",
