--- a/package.json
+++ b/package.json
@@ -7,16 +7,21 @@
     "@types/classnames": "^2.2.11",
     "@types/lodash": "^4.14.165",
     "@types/react": "^16.9.56",
+    "@types/react-datepicker": "^3.1.1",
     "@types/react-dom": "^16.9.8",
+    "@types/react-modal": "^3.10.6",
     "@types/react-redux": "^7.1.9",
     "@types/react-router-dom": "^5.1.6",
     "@types/uuid": "^8.3.0",
+    "antd": "^4.6.6",
     "axios": "^0.19.2",
     "classnames": "^2.2.6",
     "lodash": "^4.17.20",
     "node-sass": "^4.14.1",
     "react": "^17.0.1",
+    "react-datepicker": "^3.3.0",
     "react-dom": "^17.0.1",
+    "react-modal": "^3.11.2",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
