--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "antd": "^4.6.6",
     "axios": "^0.19.2",
     "classnames": "^2.2.6",
+    "date-fns": "^2.16.1",
     "lodash": "^4.17.20",
     "node-sass": "^4.14.1",
     "react": "^17.0.1",
