--- a/package.json
+++ b/package.json
@@ -12,20 +12,23 @@
     "@types/react-modal": "^3.10.6",
     "@types/react-redux": "^7.1.9",
     "@types/react-router-dom": "^5.1.6",
+    "@types/react-select": "^3.0.26",
     "@types/uuid": "^8.3.0",
-    "antd": "^4.6.6",
     "axios": "^0.19.2",
     "classnames": "^2.2.6",
     "date-fns": "^2.16.1",
+    "final-form": "^4.20.1",
     "lodash": "^4.17.20",
     "node-sass": "^4.14.1",
     "react": "^17.0.1",
     "react-datepicker": "^3.3.0",
     "react-dom": "^17.0.1",
+    "react-final-form": "^6.5.2",
     "react-modal": "^3.11.2",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
+    "react-select": "^3.1.1",
     "redux-devtools-extension": "^2.13.8",
     "redux-saga": "^1.1.3",
     "typescript": "^3.9.7",
