--- a/package.json
+++ b/package.json
@@ -4,22 +4,36 @@
   "private": true,
   "proxy": "http://10.0.6.46/prod",
   "dependencies": {
+    "@reduxjs/toolkit": "^1.4.0",
     "@types/classnames": "^2.2.11",
     "@types/lodash": "^4.14.165",
+    "@types/qs": "^6.9.5",
     "@types/react": "^16.9.56",
+    "@types/react-datepicker": "^3.1.1",
     "@types/react-dom": "^16.9.8",
+    "@types/react-modal": "^3.10.6",
+    "@types/react-paginate": "^6.2.1",
     "@types/react-redux": "^7.1.9",
     "@types/react-router-dom": "^5.1.6",
+    "@types/react-select": "^3.0.26",
     "@types/uuid": "^8.3.0",
     "axios": "^0.19.2",
     "classnames": "^2.2.6",
+    "date-fns": "^2.16.1",
+    "final-form": "^4.20.1",
     "lodash": "^4.17.20",
     "node-sass": "^4.14.1",
+    "qs": "^6.9.4",
     "react": "^17.0.1",
+    "react-datepicker": "^3.3.0",
     "react-dom": "^17.0.1",
+    "react-final-form": "^6.5.2",
+    "react-modal": "^3.11.2",
+    "react-paginate": "^6.5.0",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
+    "react-select": "^3.1.1",
     "redux-devtools-extension": "^2.13.8",
     "redux-saga": "^1.1.3",
     "typescript": "^3.9.7",
